--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="d3_boxplot.js"></script>
     <title>Social Media Boxplot</title>
     <style>
         body { font-family: Arial, sans-serif; }
