--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="d3_boxplot.js"></script>
     <title>Social Media Boxplot</title>
     <style>
         body { font-family: Arial, sans-serif; }
@@ -11,6 +10,7 @@
 </head>
 <body>
     <h2>Social Media Likes Distribution</h2>
+    <script src='https://d3js.org/d3.v7.min.js'></script>
     <script src="d3_boxplot.js"></script>
 </body>
 </html>
