--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <h2>Social Media Likes Distribution</h2>
-    <script src="d3_boxplot.js"></script>
+    <script src="ds_boxplot.js"></script>
 </body>
 </html>
