--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <body>
     <h2>Social Media Likes Distribution</h2>
     <script src="ds_boxplot.js"></script>
+    <h2>Average Likes by Platform and Post Type</h2>
+    <script src="d3_barplot.js"></script>
 </body>
 </html>
