--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="ds_boxplot.js"></script>
     <h2>Average Likes by Platform and Post Type</h2>
     <script src="d3_barplot.js"></script>
+    <h2>Average Likes Over Time</h2>
+    <script src="d3_lineplot.js"></script>
 </body>
 </html>
